commits/78856c2a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-mdsservice  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-mdsservice
  template:
    metadata:
      labels:
        app: aks-mdsservice
    spec:
      volumes:
        - name: mds-appsettings-volume
          configMap:
            name: mds-appsettings
      containers:
        - name: aks-mdsservice
          image: ##imagename##
          ports:
            - containerPort: 80
          volumeMounts:
            - name: mds-appsettings-volume
              mountPath: /app/appsettings.Production.json
              subPath: appsettings.Production.json
          imagePullPolicy: Always
        - name: mdsworkerservice
          image: ##workerimagename##
          volumeMounts:
            - name: mds-appsettings-volume
              mountPath: /app/appsettings.Production.json
              subPath: appsettings.Production.json
          imagePullPolicy: Always
      nodeSelector:
        agentpool: apppool
---
apiVersion: v1
kind: Service
metadata:
  name: aks-mdsservice  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-mdsservice
