commits/78856c2a/mdsservice-ingress-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdsservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ##dnsname##
    secretName: tls-secret
  rules:
  - host: ##dnsname##
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-mdsservice
            port:
              number: 80
